bug_report/duckdb_bug_report/14722.txt
ID: 14722
Title: build failure: unknown type name 'CoreFunctionsExtension'; did you mean 'ConjunctionExpression'?
Description:
### What happens?

Recently, `make` has been failing at the same point (see below).
Failures occurred with:

-- git hash 131787252c, version v1.1.4-dev1503, extension folder 131787252c
-- git hash 564eb25ef0, version v1.1.4-dev1521, extension folder 564eb25ef0

```
$ uname -a
Darwin Mac-mini.local 21.6.0 Darwin Kernel Version 21.6.0: Wed Apr 24 06:02:02 PDT 2024; root:xnu-8020.240.18.708.4~1/RELEASE_X86_64 x86_64

$ make
mkdir -p ./build/release && \
	cd build/release && \
	cmake          -DENABLE_EXTENSION_AUTOLOADING= -DENABLE_EXTENSION_AUTOINSTALL= -DLOCAL_EXTENSION_REPO=""  -DOVERRIDE_GIT_DESCRIBE=""  -DCMAKE_BUILD_TYPE=Release ../.. && \
	cmake --build . --config Release
statusUNSAFE_NUMERIC_CAST
-- git hash 131787252c, version v1.1.4-dev1503, extension folder 131787252c
-- Extensions will be deployed to: /Users/peter/github/duckdb/build/release/repository
-- Load extension 'json' from '/Users/peter/github/duckdb/extensions' @ 131787252c
-- Load extension 'core_functions' from '/Users/peter/github/duckdb/extensions' @ 131787252c
-- Load extension 'parquet' from '/Users/peter/github/duckdb/extensions' @ 131787252c
-- Extensions linked into DuckDB: [json, core_functions, parquet]
-- Configuring done (8.7s)
-- Generating done (9.5s)
...
[ 44%] Building CXX object src/main/extension/CMakeFiles/duckdb_generated_extension_loader.dir/__/__/__/codegen/src/generated_extension_loader.cpp.o
/Users/peter/github/duckdb/build/release/codegen/src/generated_extension_loader.cpp:13:30: error: 
      unknown type name 'CoreFunctionsExtension'; did you mean 'ConjunctionExpression'?
      db.LoadStaticExtension<CoreFunctionsExtension>();
                             ^~~~~~~~~~~~~~~~~~~~~~
                             ConjunctionExpression
/Users/peter/github/duckdb/src/include/duckdb/parser/tokens.hpp:67:7: note: 'ConjunctionExpression'
      declared here
class ConjunctionExpression;
      ^
In file included from /Users/peter/github/duckdb/build/release/codegen/src/generated_extension_loader.cpp:1:
In file included from /Users/peter/github/duckdb/src/include/duckdb/main/extension/generated_extension_loader.hpp:13:
/Users/peter/github/duckdb/src/include/duckdb/main/database.hpp:118:5: error: variable has incomplete
      type 'duckdb::ConjunctionExpression'
                T extension;
                  ^
/Users/peter/github/duckdb/build/release/codegen/src/generated_extension_loader.cpp:13:10: note: in
      instantiation of function template specialization
      'duckdb::DuckDB::LoadStaticExtension<duckdb::ConjunctionExpression>' requested here
      db.LoadStaticExtension<CoreFunctionsExtension>();
         ^
/Users/peter/github/duckdb/src/include/duckdb/parser/tokens.hpp:67:7: note: forward declaration of
      'duckdb::ConjunctionExpression'
class ConjunctionExpression;
      ^
2 errors generated.
make[3]: *** [src/main/extension/CMakeFiles/duckdb_generated_extension_loader.dir/__/__/__/codegen/src/generated_extension_loader.cpp.o] Error 1
make[2]: *** [src/main/extension/CMakeFiles/duckdb_generated_extension_loader.dir/all] Error 2
make[1]: *** [all] Error 2
make: *** [release] Error 2


```

### To Reproduce

```
make
```

### OS:

MacOS

### DuckDB Version:

git hash 564eb25ef0, version v1.1.4-dev1521, extension folder 564eb25ef0

### DuckDB Client:

n.a.

### Hardware:

_No response_

### Full Name:

Peter Koppstein

### Affiliation:

Princeton University

### What is the latest build you tested with? If possible, we recommend testing with the latest nightly build.

I have tested with a source build

### Did you include all relevant data sets for reproducing the issue?

Not applicable - the reproduction does not require a data set

### Did you include all code required to reproduce the issue?

- [X] Yes, I have

### Did you include all relevant configuration (e.g., CPU architecture, Python version, Linux distribution) to reproduce the issue?

- [X] Yes, I have